plugins {
    id 'org.springframework.boot' version '2.6.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "com.diffplug.spotless" version "6.4.1"
    id 'com.adarshr.test-logger' version '3.1.0'
    id "org.sonarqube" version "3.3"
    id 'jacoco'
    id "io.freefair.lombok" version "6.4.2"
}

group = 'codurance.academy-final-boy'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.flywaydb:flyway-core:7.5.3' // DON'T UPDATE
    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "io.rest-assured:rest-assured:4.4.0"

    implementation 'com.google.api-client:google-api-client-jackson2:1.20.0'
    compileOnly 'com.google.api-client:google-api-client:1.31.5'


    testImplementation "io.cucumber:cucumber-java:7.2.3"
    testImplementation "io.cucumber:cucumber-spring:7.2.3"
    testImplementation "io.cucumber:cucumber-junit-platform-engine:7.2.3"


    testRuntimeOnly "org.junit.platform:junit-platform-console"
    implementation 'org.junit.platform:junit-platform-suite-engine:1.8.2'

    implementation 'com.microsoft.azure:applicationinsights-spring-boot-starter:2.6.4'

}

tasks.named('test') {
    useJUnitPlatform()
    systemProperty("cucumber.junit-platform.naming-strategy", "long")
}


spotless {
    java {
        googleJavaFormat()
    }
}

jacocoTestReport {
    reports {
        xml.enabled true
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "academy-jan-2022_academy-final-boy"
        property "sonar.organization", "academy-jan-2022"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}
